--- a/src/main/resources/templates/formPatient.html
+++ b/src/main/resources/templates/formPatient.html
@@ -23,7 +23,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="Date Naissance" class="form-label">Date Naissance</label>
-                        <input class="form-control" type="Date" name="Date Naissance" id="Date Naissance" placeholder="enter Date" th:value="${patient.dateNaissance}">
+                        <input class="form-control" type="date" name="dateNaissance" id="Date Naissance" placeholder="enter Date" th:value="${patient.dateNaissance}">
                     </div>
                     <div  class="mb-3">
                         <label for="malade" class="form-label">malade</label>
